# inkwell

./: .gitignore  AGENTS.md  flake.nix  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs  serde_helpers.rs  state.rs
src-tauri/src/commands/: ai.rs  character.rs  mod.rs  narrative.rs  outline.rs  outline_generation.rs  project.rs  relation.rs  review.rs  workflow.rs  worldview.rs
src-tauri/src/db/: migrations.rs  mod.rs  models.rs  store.rs
src-tauri/src/services/: agent_service.rs  ai_service.rs  character_service.rs  context_service.rs  mod.rs  narrative_service.rs  outline_generation_service.rs  outline_service.rs  project_service.rs  relation_service.rs  review_service.rs  workflow_service.rs  worldview_service.rs
src/components/ai/: AiPanel.tsx  NarrativePanel.tsx
src/components/chapter/: ChapterTree.tsx
src/components/character/: CharacterGraph.tsx
src/components/editor/: AiFloatingPanel.tsx  Editor.tsx
src/components/layout/: AppLayout.tsx  ProjectLayout.tsx
src/components/ui/: alert-dialog.tsx  collapsible.tsx  dialog.tsx  tabs.tsx
src/contexts/: AiEditorContext.tsx
src/extensions/: inline-diff.ts
src/hooks/: useDialog.ts  useEditorSelection.ts  useResource.ts  useStreamingSession.ts
src/lib/: api.ts  constants.ts  motion.ts  types.ts
src/pages/: CharactersPage.tsx  EditorPage.tsx  ProjectDetailsPage.tsx  ProjectsPage.tsx  SettingsPage.tsx  WorldviewPage.tsx
