[package]
name = "inkwell"
version = "0.1.0"
description = "AI-powered novel writing application"
authors = ["FWW321"]
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.39", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
rig-core = "0.33"
reqwest = { version = "0.13", features = ["json"] }
tauri-plugin-mcp-bridge = "0.10"
dirs = "6"
