[package]
name = "inkwell"
version = "0.1.0"
description = "AI-powered novel writing application"
authors = ["FWW321"]
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
surrealdb = { version = "3", features = ["kv-surrealkv"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
reqwest = { version = "0.13", features = ["json", "stream"] }
futures-util = "0.3"
tauri-plugin-mcp-bridge = "0.10"
dirs = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
